--- a/index.html
+++ b/index.html
@@ -213,6 +213,26 @@
       </div>
     </div>
 
+    <div class="card" data-tab="javascript">
+      <div class="headline">Javascript and why you actually don't understand it</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By Jeff</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="technology">
+      <div class="headline">5 tips for using the new Apple floating toilet</div>
+      <div class="author">
+        <div class="img-container">
+            <img src="./assets/fido.jpg" />
+        </div>
+        <span>By Snowball</span>
+      </div>
+    </div>
+
   </div>
 </body>
 
